tests/bad/testDivideByZero.grc
a := 10
b := a / 0 // Error: Division by literal zero
